Fixes an issue with scrollbars appearing when zoomed in.

--- a/UI/Web/src/app/book-reader/_components/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/_components/book-reader/book-reader.component.scss
@@ -138,10 +138,18 @@ $action-bar-height: 38px;
 
     &.column-layout-1 {
         height: calc(var(--vh) * 100);
+
+        &.writing-style-vertical {
+            overflow-x: hidden;
+        }
     }
 
     &.column-layout-2 {
         height: calc(var(--vh) * 100);
+
+        &.writing-style-vertical {
+            overflow-x: hidden;
+        }
     }
 
     &.writing-style-vertical {
